--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "lit": "^3.1.4"
     },
     "devDependencies": {
-        "concurrently": "^9.1.0",
+        "typescript": "^5.5.3",
         "nodemon": "^3.1.4"
     }
 }
